--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "next dev",
+    "dev": "node server.js",
     "next": "next"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "ganache-cli": "^6.1.3",
     "mocha": "^5.2.0",
     "next": "^4.1.4",
+    "next-routes": "^1.4.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "semantic-ui-css": "^2.3.2",
